Added fonts and favicon

--- a/src/infrastructure/styles/index.css
+++ b/src/infrastructure/styles/index.css
@@ -17,7 +17,7 @@
 @layer components {
   /*! purgecss start ignore */
   body {
-    font-family: 'Karla';
+    font-family: 'Barlow';
   }
   /*! purgecss end ignore */
 }
