Finished verify employee page

--- a/src/infrastructure/styles/index.css
+++ b/src/infrastructure/styles/index.css
@@ -18,6 +18,8 @@
   /*! purgecss start ignore */
   body {
     font-family: 'Barlow';
+
+    letter-spacing: 0.005em;
   }
   /*! purgecss end ignore */
 }
